Revert "ci: explicit declare deps for nx"
This reverts commit a8a3f989c3b65c0f77edd2b888f1504d74ff8ef7.

--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -62,11 +62,5 @@
   },
   "homepage": "https://github.com/loopingz/webda.io#readme",
   "repository": "git://github.com/loopingz/webda.io.git",
-  "license": "MIT",
-  "nx": {
-    "implicitDependencies": [
-      "@webda/core",
-      "@webda/shell"
-    ]
-  }
+  "license": "MIT"
 }
