--- a/packages/shell/package.json
+++ b/packages/shell/package.json
@@ -90,12 +90,5 @@
     "sinon": "^15.0.0",
     "ts-node": "^10.8.1"
   },
-  "type": "module",
-  "nx": {
-    "implicitDependencies": [
-      "@webda/core",
-      "@webda/tsc-esm",
-      "@webda/kubernetes"
-    ]
-  }
+  "type": "module"
 }
